[gd_scene load_steps=3 format=3 uid="uid://cvbhy36ycjysr"]

[ext_resource type="Script" path="res://sound/sfx_player.gd" id="1_vy7nq"]
[ext_resource type="AudioStream" uid="uid://c2b0vcdwnxjbk" path="res://sound/mmmm.wav" id="2_b2ece"]

[node name="SfxPlayer" type="Node"]
script = ExtResource("1_vy7nq")

[node name="SmorePickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b2ece")

[node name="StompSound" type="AudioStreamPlayer" parent="."]
